--- a/The Other Godot Project/export_presets.cfg
+++ b/The Other Godot Project/export_presets.cfg
@@ -2,12 +2,12 @@
 
 name="Windows Desktop"
 platform="Windows Desktop"
-runnable=true
+runnable=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../Jeu.exe"
+export_path="../../../../..//Uproad.exe"
 script_export_mode=1
 script_encryption_key=""
 
